@@ -24,6 +24,7 @@ README
 SIGNATURE
 t/data/cnb000024035.xml
 t/data/cnb000040543.xml
+t/data/cnb000065206.xml
 t/data/cnb000080974.xml
 t/data/cnb000087983.xml
 t/data/cnb000103538.xml
@@ -80,20 +81,21 @@ t/MARC-Convert-Wikidata-Transform/02-version.t
 t/MARC-Convert-Wikidata-Transform/03-new.t
 t/MARC-Convert-Wikidata-Transform/04-object-cnb000024035.t
 t/MARC-Convert-Wikidata-Transform/05-object-cnb000040543.t
-t/MARC-Convert-Wikidata-Transform/06-object-cnb000080974.t
-t/MARC-Convert-Wikidata-Transform/07-object-cnb000087983.t
-t/MARC-Convert-Wikidata-Transform/08-object-cnb000103538.t
-t/MARC-Convert-Wikidata-Transform/09-object-cnb000576456.t
-t/MARC-Convert-Wikidata-Transform/10-object-cnb000750575.t
-t/MARC-Convert-Wikidata-Transform/11-object-cnb000750997.t
-t/MARC-Convert-Wikidata-Transform/12-object-cnb000964081.t
-t/MARC-Convert-Wikidata-Transform/13-object-cnb001042253.t
-t/MARC-Convert-Wikidata-Transform/14-object-cnb001756719.t
-t/MARC-Convert-Wikidata-Transform/15-object-cnb002031137.t
-t/MARC-Convert-Wikidata-Transform/16-object-cnb002662450.t
-t/MARC-Convert-Wikidata-Transform/17-object-cnb002835707.t
-t/MARC-Convert-Wikidata-Transform/18-object-cnb003565872.t
-t/MARC-Convert-Wikidata-Transform/19-object-cnb003633764.t
+t/MARC-Convert-Wikidata-Transform/06-object-cnb000065206.t
+t/MARC-Convert-Wikidata-Transform/07-object-cnb000080974.t
+t/MARC-Convert-Wikidata-Transform/08-object-cnb000087983.t
+t/MARC-Convert-Wikidata-Transform/09-object-cnb000103538.t
+t/MARC-Convert-Wikidata-Transform/10-object-cnb000576456.t
+t/MARC-Convert-Wikidata-Transform/11-object-cnb000750575.t
+t/MARC-Convert-Wikidata-Transform/12-object-cnb000750997.t
+t/MARC-Convert-Wikidata-Transform/13-object-cnb000964081.t
+t/MARC-Convert-Wikidata-Transform/14-object-cnb001042253.t
+t/MARC-Convert-Wikidata-Transform/15-object-cnb001756719.t
+t/MARC-Convert-Wikidata-Transform/16-object-cnb002031137.t
+t/MARC-Convert-Wikidata-Transform/17-object-cnb002662450.t
+t/MARC-Convert-Wikidata-Transform/18-object-cnb002835707.t
+t/MARC-Convert-Wikidata-Transform/19-object-cnb003565872.t
+t/MARC-Convert-Wikidata-Transform/20-object-cnb003633764.t
 t/MARC-Convert-Wikidata-Utils/01-use.t
 t/MARC-Convert-Wikidata-Utils/02-version.t
 t/MARC-Convert-Wikidata-Utils/03-clean_cover.t
