@@ -1,0 +1,27 @@
+use strict;
+use warnings;
+
+use File::Object;
+use MARC::Convert::Wikidata::Transform;
+use MARC::File::XML;
+use MARC::Record;
+use Perl6::Slurp qw(slurp);
+use Test::More 'tests' => 4;
+use Test::NoWarnings;
+use Unicode::UTF8 qw(decode_utf8);
+
+# Data directory.
+my $data = File::Object->new->up->dir('data');
+
+# Test.
+my $marc_data = slurp($data->file('cnb000065206.xml')->s);
+my $obj = MARC::Convert::Wikidata::Transform->new(
+	'marc_record' => MARC::Record->new_from_xml($marc_data, 'UTF-8'),
+);
+my $ret = $obj->object;
+# TODO Fix.
+is($ret->publication_date, undef, 'Get publication date (undef).');
+# TODO Fix.
+is($ret->start_time, 1969, 'Get start time (1969).');
+# TODO fix
+is($ret->end_time, 1991, 'Get end time (1991).');
